[gd_scene load_steps=2 format=3 uid="uid://bfgpgtp3rm4af"]

[ext_resource type="Script" path="res://addons/orchestrator/components/scenes/show_message.gd" id="1_m7xcw"]

[node name="ShowMessage" type="CanvasLayer"]
layer = 100
script = ExtResource("1_m7xcw")

[node name="BlockMouseInteractions" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -176.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_constants/margin_bottom = 75

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="V" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Speaker" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/V"]
layout_mode = 2
text = "Speaker Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/V"]
layout_mode = 2

[node name="SpeakerText" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/V"]
layout_mode = 2
size_flags_vertical = 6
text = "Speaker's text that will be shown."
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/V"]
layout_mode = 2

[node name="ResponseTemplate" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/V"]
visible = false
layout_mode = 2
text = "Some Response (If choices are provided)"
alignment = 0

[node name="NextButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/V"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"
alignment = 2
